--- a/android-exoplayer/src/main/res/layout/bottom_bar.xml
+++ b/android-exoplayer/src/main/res/layout/bottom_bar.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/progress_background"
     android:orientation="horizontal"
     android:padding="@dimen/activity_horizontal_margin">
 
@@ -41,11 +42,13 @@
         <com.previewseekbar.PreviewSeekBar
             android:id="@+id/previewSeekBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_below="@id/previewFrameLayout"
             android:layout_marginTop="0dp"
             android:max="800"
+            android:paddingEnd="10dp"
             android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:paddingStart="10dp" />
 
     </com.previewseekbar.PreviewSeekBarLayout>
