featuer: Add correct controls. Add the fullscreen control

--- a/android-exoplayer/src/main/res/layout/controls.xml
+++ b/android-exoplayer/src/main/res/layout/controls.xml
@@ -3,16 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/rewindImageView"
+    <FrameLayout
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_centerInParent="true"
         android:layout_toLeftOf="@+id/playPauseImageView"
         android:layout_toStartOf="@+id/playPauseImageView"
-        android:background="@drawable/circle"
-        android:contentDescription="@string/rewind_video"
-        android:src="@drawable/ic_rewind" />
+        android:background="@drawable/circle">
+
+        <ImageButton
+            android:id="@+id/rewindImageView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="-1dp"
+            android:background="#00000000"
+            android:contentDescription="@string/rewind_video"
+            android:src="@drawable/ic_rewind" />
+    </FrameLayout>
 
     <ImageButton
         android:id="@+id/playPauseImageView"
@@ -26,16 +35,26 @@
         android:src="@drawable/ic_play" />
 
 
-    <ImageButton
-        android:id="@+id/forwardImageView"
+    <FrameLayout
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_centerInParent="true"
         android:layout_toEndOf="@+id/playPauseImageView"
         android:layout_toRightOf="@+id/playPauseImageView"
-        android:background="@drawable/circle"
-        android:contentDescription="@string/forward_video"
-        android:src="@drawable/ic_forward" />
+        android:background="@drawable/circle">
+
+        <ImageButton
+            android:id="@+id/forwardImageView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="-1dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginStart="1dp"
+            android:background="#00000000"
+            android:contentDescription="@string/forward_video"
+            android:src="@drawable/ic_forward" />
+    </FrameLayout>
+
 
     <FrameLayout
         android:layout_width="match_parent"
