--- a/android-exoplayer/src/main/res/layout/bottom_bar.xml
+++ b/android-exoplayer/src/main/res/layout/bottom_bar.xml
@@ -62,4 +62,18 @@
         android:textAlignment="center"
         android:textColor="#ffffff" />
 
+    <ImageButton
+        android:id="@+id/fullscreenButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="#00000000"
+        android:contentDescription="@string/fullscreen"
+        android:gravity="center"
+        android:paddingEnd="0dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="0dp"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:src="@drawable/ic_fullscreen_off" />
+
 </LinearLayout>
