--- a/android-exoplayer/src/main/res/layout/bottom_bar.xml
+++ b/android-exoplayer/src/main/res/layout/bottom_bar.xml
@@ -65,6 +65,22 @@
         android:textAlignment="center"
         android:textColor="#ffffff" />
 
+    <TextView
+        android:id="@+id/liveTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:background="@drawable/bg_live"
+        android:gravity="center"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:text="@string/live"
+        android:textAlignment="center"
+        android:textColor="#ffffff"
+        android:textStyle="bold" />
+
     <ImageButton
         android:id="@+id/fullscreenButton"
         android:layout_width="wrap_content"
