--- a/android-exoplayer/src/main/res/layout/controls.xml
+++ b/android-exoplayer/src/main/res/layout/controls.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#40000000">
 
     <FrameLayout
         android:id="@+id/rewindContainer"
@@ -9,8 +10,7 @@
         android:layout_height="40dp"
         android:layout_centerInParent="true"
         android:layout_toLeftOf="@+id/playPauseImageView"
-        android:layout_toStartOf="@+id/playPauseImageView"
-        android:background="@drawable/circle">
+        android:layout_toStartOf="@+id/playPauseImageView">
 
         <ImageButton
             android:id="@+id/rewindImageView"
@@ -26,8 +26,8 @@
 
     <ImageButton
         android:id="@+id/playPauseImageView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_centerInParent="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -42,16 +42,15 @@
         android:layout_height="40dp"
         android:layout_centerInParent="true"
         android:layout_toEndOf="@+id/playPauseImageView"
-        android:layout_toRightOf="@+id/playPauseImageView"
-        android:background="@drawable/circle">
+        android:layout_toRightOf="@+id/playPauseImageView">
 
         <ImageButton
             android:id="@+id/forwardImageView"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="-1dp"
             android:layout_marginLeft="1dp"
             android:layout_marginStart="1dp"
+            android:layout_marginTop="-1dp"
             android:background="#00000000"
             android:contentDescription="@string/forward_video"
             android:src="@drawable/ic_forward" />
