--- a/android-exoplayer/src/main/res/layout/bottom_bar.xml
+++ b/android-exoplayer/src/main/res/layout/bottom_bar.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/bottomBarContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/progress_background"
     android:orientation="horizontal"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:paddingBottom="@dimen/activity_horizontal_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_horizontal_margin">
 
     <TextView
         android:id="@+id/currentTimeTextView"
