--- a/android-exoplayer/src/main/res/layout/bottom_bar.xml
+++ b/android-exoplayer/src/main/res/layout/bottom_bar.xml
@@ -86,7 +86,7 @@
         android:textStyle="bold" />
 
     <ImageButton
-        android:id="@+id/fullscreenButton"
+        android:id="@+id/bottomRightIconButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
