--- a/android-exoplayer/src/main/res/layout/bottom_bar.xml
+++ b/android-exoplayer/src/main/res/layout/bottom_bar.xml
@@ -3,21 +3,21 @@
     android:id="@+id/bottomBarContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/progress_background"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/activity_horizontal_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_horizontal_margin">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp">
 
     <TextView
         android:id="@+id/currentTimeTextView"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="44dp"
         android:gravity="center"
         android:text="@string/default_time"
         android:textAlignment="center"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:paddingBottom="1dp"/>
 
     <com.previewseekbar.PreviewSeekBarLayout
         android:id="@+id/previewSeekBarLayout"
@@ -63,11 +63,12 @@
     <TextView
         android:id="@+id/durationTextView"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="44dp"
         android:gravity="center"
         android:text="@string/default_time"
         android:textAlignment="center"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:paddingBottom="1dp"/>
 
     <TextView
         android:id="@+id/liveTextView"
@@ -87,15 +88,15 @@
 
     <ImageButton
         android:id="@+id/bottomRightIconButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
         android:layout_gravity="center"
         android:background="#00000000"
         android:contentDescription="@string/fullscreen"
         android:gravity="center"
-        android:paddingEnd="0dp"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="0dp"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:src="@drawable/ic_fullscreen_off" />
 
