--- a/android-exoplayer/src/main/res/layout/bottom_bar.xml
+++ b/android-exoplayer/src/main/res/layout/bottom_bar.xml
@@ -4,20 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp">
+    android:paddingBottom="12dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="8dp">
 
     <TextView
         android:id="@+id/currentTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
+        android:layout_marginBottom="1dp"
         android:gravity="center"
+        android:paddingBottom="1dp"
         android:text="@string/default_time"
         android:textAlignment="center"
-        android:textColor="#ffffff"
-        android:paddingBottom="1dp"/>
+        android:textColor="#ffffff" />
 
     <com.previewseekbar.PreviewSeekBarLayout
         android:id="@+id/previewSeekBarLayout"
@@ -64,11 +65,12 @@
         android:id="@+id/durationTextView"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
+        android:layout_marginBottom="1dp"
         android:gravity="center"
+        android:paddingBottom="1dp"
         android:text="@string/default_time"
         android:textAlignment="center"
-        android:textColor="#ffffff"
-        android:paddingBottom="1dp"/>
+        android:textColor="#ffffff" />
 
     <TextView
         android:id="@+id/liveTextView"
