feature: Add the ability to add padding at the bottom

--- a/android-exoplayer/src/main/res/layout/controls.xml
+++ b/android-exoplayer/src/main/res/layout/controls.xml
@@ -58,6 +58,7 @@
 
 
     <FrameLayout
+        android:id="@+id/bottomBarWidgetContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true">
