--- a/android-exoplayer/src/main/res/layout/controls.xml
+++ b/android-exoplayer/src/main/res/layout/controls.xml
@@ -4,58 +4,65 @@
     android:layout_height="match_parent"
     android:background="#80000000">
 
-    <FrameLayout
-        android:id="@+id/rewindContainer"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerInParent="true"
-        android:layout_toLeftOf="@+id/playPauseImageView"
-        android:layout_toStartOf="@+id/playPauseImageView">
+    <RelativeLayout
+        android:id="@+id/middleCoreControlsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
 
-        <ImageButton
-            android:id="@+id/rewindImageView"
+        <FrameLayout
+            android:id="@+id/rewindContainer"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="-1dp"
-            android:background="#00000000"
-            android:contentDescription="@string/rewind_video"
-            android:src="@drawable/ic_rewind" />
-    </FrameLayout>
+            android:layout_centerInParent="true"
+            android:layout_toLeftOf="@+id/playPauseImageView"
+            android:layout_toStartOf="@+id/playPauseImageView">
 
-    <ImageButton
-        android:id="@+id/playPauseImageView"
-        android:layout_width="66dp"
-        android:layout_height="66dp"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="34dp"
-        android:layout_marginRight="34dp"
-        android:background="@drawable/circle_dark"
-        android:contentDescription="@string/play_video"
-        android:src="@drawable/ic_play" />
-
-
-    <FrameLayout
-        android:id="@+id/forwardContainer"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerInParent="true"
-        android:layout_toEndOf="@+id/playPauseImageView"
-        android:layout_toRightOf="@+id/playPauseImageView">
+            <ImageButton
+                android:id="@+id/rewindImageView"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="-1dp"
+                android:background="#00000000"
+                android:contentDescription="@string/rewind_video"
+                android:src="@drawable/ic_rewind" />
+        </FrameLayout>
 
         <ImageButton
-            android:id="@+id/forwardImageView"
+            android:id="@+id/playPauseImageView"
+            android:layout_width="66dp"
+            android:layout_height="66dp"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="34dp"
+            android:layout_marginRight="34dp"
+            android:background="@drawable/circle_dark"
+            android:contentDescription="@string/play_video"
+            android:src="@drawable/ic_play" />
+
+
+        <FrameLayout
+            android:id="@+id/forwardContainer"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="1dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="-1dp"
-            android:background="#00000000"
-            android:contentDescription="@string/forward_video"
-            android:src="@drawable/ic_forward" />
-    </FrameLayout>
+            android:layout_centerInParent="true"
+            android:layout_toEndOf="@+id/playPauseImageView"
+            android:layout_toRightOf="@+id/playPauseImageView">
 
+            <ImageButton
+                android:id="@+id/forwardImageView"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginTop="-1dp"
+                android:background="#00000000"
+                android:contentDescription="@string/forward_video"
+                android:src="@drawable/ic_forward" />
+        </FrameLayout>
+
+    </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/bottomBarWidgetContainer"
