--- a/android-exoplayer/src/main/res/layout/bottom_bar.xml
+++ b/android-exoplayer/src/main/res/layout/bottom_bar.xml
@@ -50,15 +50,13 @@
         <com.previewseekbar.PreviewSeekBar
             android:id="@+id/previewSeekBar"
             android:layout_width="match_parent"
-            android:layout_height="44dp"
+            android:layout_height="30dp"
             android:layout_below="@id/previewFrameLayout"
-            android:max="800"
-            android:maxHeight="44dp"
-            android:minHeight="44dp"
-            android:paddingEnd="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingStart="10dp" />
+            android:maxHeight="@dimen/previewseekbar_progress_height"
+            android:minHeight="@dimen/previewseekbar_progress_height"
+            android:minWidth="@dimen/previewseekbar_progress_width"
+            android:maxWidth="@dimen/previewseekbar_progress_width"
+            android:progressDrawable="@drawable/previewseekbar_progress_drawable" />
 
     </com.previewseekbar.PreviewSeekBarLayout>
 
@@ -83,11 +81,12 @@
         android:layout_marginStart="0dp"
         android:background="@drawable/bg_live"
         android:gravity="center"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:text="@string/live"
         android:textAlignment="center"
         android:textColor="#ffffff"
+        android:textSize="10sp"
         android:textStyle="bold" />
 
     <ImageButton
