feat: Overlay Screen on pause (3) bigger refactor.

--- a/android-exoplayer/src/main/res/layout/bottom_bar.xml
+++ b/android-exoplayer/src/main/res/layout/bottom_bar.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="8dp"
+    android:focusable="true"
     android:background="@drawable/bg_bottom_bar">
 
     <TextView
