--- a/android-exoplayer/src/main/res/layout/controls_tv.xml
+++ b/android-exoplayer/src/main/res/layout/controls_tv.xml
@@ -26,10 +26,18 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
+            <com.imggaming.widgets.DceSeekIndicator
+                android:id="@+id/seekIndicator"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
             <FrameLayout
                 android:id="@+id/previewFrameLayout"
                 android:layout_width="@dimen/video_preview_width"
                 android:layout_height="@dimen/video_preview_height"
+                android:layout_below="@id/seekIndicator"
                 tools:background="#50ff0000"
                 android:visibility="gone"
                 tools:visibility="visible">
@@ -38,17 +46,10 @@
                     android:id="@+id/imageView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:src="@drawable/exo_edit_mode_logo"
                     android:contentDescription="@string/preview_image" />
 
             </FrameLayout>
-
-            <com.imggaming.widgets.DceSeekIndicator
-                android:id="@+id/seekIndicator"
-                android:visibility="gone"
-                tools:visibility="visible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/previewFrameLayout" />
 
             <com.previewseekbar.PreviewSeekbarTV
                 style="@style/TVSeekBar"
@@ -59,7 +60,7 @@
                 android:layout_marginRight="4dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/seekIndicator"
+                android:layout_below="@id/previewFrameLayout"
                 android:focusableInTouchMode="false"
                 android:focusable="true"
                 android:nextFocusRight="@+id/tvPlayPauseImageView"
