--- a/android-exoplayer/src/main/res/layout/controls_tv.xml
+++ b/android-exoplayer/src/main/res/layout/controls_tv.xml
@@ -20,41 +20,51 @@
             android:id="@+id/previewSeekBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:clipToPadding="false"
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
             <FrameLayout
                 android:id="@+id/previewFrameLayout"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/video_preview_width"
                 android:layout_height="wrap_content"
                 tools:background="#50ff0000"
                 android:visibility="gone"
                 tools:visibility="visible">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:orientation="vertical">
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                    <com.imggaming.widgets.DceSeekIndicator
+                    <include
                         android:id="@+id/seekIndicator"
+                        layout="@layout/dce_seek_indicator"
                         android:visibility="visible"
-                        android:layout_gravity="center_horizontal"
-                        tools:visibility="visible"
-                        android:layout_width="wrap_content"
-                        android:layout_height="20dp" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:visibility="visible" />
 
                     <ImageView
                         android:id="@+id/imageView"
-                        android:layout_width="@dimen/video_preview_width"
+                        android:layout_width="match_parent"
                         android:layout_height="@dimen/video_preview_height"
+                        android:contentDescription="@string/preview_image"
                         android:src="@drawable/exo_edit_mode_logo"
-                        android:contentDescription="@string/preview_image" />
-                </LinearLayout>
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/seekIndicator" />
+
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:src="@drawable/video_preview_border"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+                        app:layout_constraintEnd_toEndOf="@+id/imageView"
+                        app:layout_constraintStart_toStartOf="@+id/imageView"
+                        app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+                </android.support.constraint.ConstraintLayout>
 
             </FrameLayout>
 
