--- a/android-exoplayer/src/main/res/layout/dce_seek_indicator.xml
+++ b/android-exoplayer/src/main/res/layout/dce_seek_indicator.xml
@@ -1,39 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.imggaming.widgets.DceSeekIndicator xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:background="#50ff0000"
-    tools:showIn="@layout/controls_tv">
-
-    <ImageView
-        android:id="@+id/seekIndicatorImageRewind"
-        android:src="@drawable/ic_seek_rewind"
-        android:layout_gravity="center_vertical"
-        android:scaleType="centerInside"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp"/>
-
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/seekIndicatorLabel"
-        android:textAppearance="@style/TextAppearance.SeekIndicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:lines="1"
-        android:layout_gravity="center_vertical"
-        android:text="00:00:00 / 00:00:00" />
-
-    <ImageView
-        android:id="@+id/seekIndicatorImageForward"
-        android:src="@drawable/ic_seek_forward"
-        android:layout_gravity="center_vertical"
-        android:scaleType="centerInside"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp" />
-
-</LinearLayout>
+    android:id="@+id/seekIndicatorLabel"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/video_preview_indicator_height"
+    android:gravity="center"
+    android:lines="1"
+    android:text="00:00:00 / 00:00:00"
+    android:textAppearance="@style/TextAppearance.SeekIndicator"
+    tools:background="#50ff0000" />
